--- a/views/partials/headinclude.hbs
+++ b/views/partials/headinclude.hbs
@@ -5,10 +5,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   <!-- <link rel="stylesheet" href="http://mattelprojectplace.mattel.com/Content/ts-common.css"> -->
-  <!-- /*<style type="text/css" id="core-notify">
-    .container {
-      padding-top: 2px;
-      padding-bottom: 5px;
+  <style type="text/css" id="core-notify">
+    .videothumbs {
+      float: left;
+      /*padding-bottom: 5px;*/
     }
-  </style>*/ -->
+    .video-thumb-container{width:100%;display:inline-block}
+  </style>
 </head>
