--- a/views/partials/mainnav.hbs
+++ b/views/partials/mainnav.hbs
@@ -7,6 +7,9 @@
       <li class="nav-item">
         <a class="nav-item nav-link" href="/mattelvideoplayer"><i class="fa fa-sitemap" aria-hidden="true"></i> Playlist with mattel Player</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-item nav-link" href="/playlistverticalcarousel"><i class="fa fa-sitemap" aria-hidden="true"></i> Playlist Vertical Carousel</a>
+      </li>
       <input type="hidden" id="ts-login-id" value="" name="">
       <input type="hidden" id="ts-identity-id" value="" name="">
       <input type="hidden" id="ts-db-user-id" value="" name="">
