--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -3,3 +3,5 @@
 <footer class="panel-footer">
   <p class="text-center">Copyright {{getCurrentYear}}</p>
 </footer>
+<script type="text/javascript" src="scripts/slick.min.js"></script>
+<script src="scripts/common.js"></script>
