--- a/views/partials/headinclude.hbs
+++ b/views/partials/headinclude.hbs
@@ -3,6 +3,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>
+
+  <link rel="stylesheet" type="text/css" href="css/custom.css"/>
+
+
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   <!-- <link rel="stylesheet" href="http://mattelprojectplace.mattel.com/Content/ts-common.css"> -->
   <style type="text/css" id="core-notify">
@@ -10,6 +17,5 @@
       float: left;
       /*padding-bottom: 5px;*/
     }
-    .video-thumb-container{width:100%;display:inline-block}
   </style>
 </head>
