Added container class to body

--- a/views/mattelvideoplayer.hbs
+++ b/views/mattelvideoplayer.hbs
@@ -2,12 +2,12 @@
 <html>
 {{>headinclude}}
 
-<body>
+<body class = "container-fluid">
   <div class="">
     <div class="hiddenPlayerIds" id="oo-player-id" style="display: none;">
       <input type="hidden" value="HCciv4ej">
     </div>
-    <input type="hidden" id="oo-player-pcode" value="s5Z2MyOlF46r3PXZUl9hPiwU2cYK" /> 
+    <input type="hidden" id="oo-player-pcode" value="s5Z2MyOlF46r3PXZUl9hPiwU2cYK" />
 
     {{>header}}
 
