--- a/views/playlist.hbs
+++ b/views/playlist.hbs
@@ -2,9 +2,9 @@
 <html>
 {{>headinclude}}
 
-<body>
+<body class = "container-fluid">
   {{>header}}
-  <script src="//content.jwplatform.com/players/Mx7YyYDQ-HCciv4ej.js"></script>
+  <script src="//content.jwplatform.com/players/6x0GWItI-HCciv4ej.js"></script>
   {{>footer}}
 </body>
 
