Added copyright to footer

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,7 +1,7 @@
 <br>
 <br>
 <footer class="panel-footer">
-  <p class="text-center">Copyright {{getCurrentYear}}</p>
+  <p class="text-center">©{{getCurrentYear}} Mattel. All Rights Reserved.</p>
 </footer>
 <script type="text/javascript" src="scripts/slick.min.js"></script>
 <script src="scripts/common.js"></script>
