--- a/views/mattelvideoplayer.hbs
+++ b/views/mattelvideoplayer.hbs
@@ -5,7 +5,7 @@
 <body class = "container-fluid">
   <div class="">
     <div class="hiddenPlayerIds" id="oo-player-id" style="display: none;">
-      <input type="hidden" value="HCciv4ej">
+      <input type="hidden" value="QOlQApHb">
     </div>
     <input type="hidden" id="oo-player-pcode" value="s5Z2MyOlF46r3PXZUl9hPiwU2cYK" />
 
