--- a/views/playlist.hbs
+++ b/views/playlist.hbs
@@ -12,6 +12,7 @@
 </script>
 <noscript><div>Please enable Javascript to watch this video</div></noscript>
   {{>footer}}
+  <script src="./scripts/ad_manager_vast.js"></script>
 </body>
 
 </html>
