--- a/views/adpoc.hbs
+++ b/views/adpoc.hbs
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
-  <body>
+{{>headinclude}}
+
+<body class = "container-fluid">
+  {{>header}}
     <div id='container' style='width:640px;height:480px'></div>
     <script src='//player.ooyala.com/v3/eb2a4912cd64bc282805e03574a056c'></script>
     <div id='ooyalaplayer' style='width:1280px;height:720px'></div>
