--- a/views/playlist.hbs
+++ b/views/playlist.hbs
@@ -2,17 +2,10 @@
 <html>
 {{>headinclude}}
 
-<body class = "container-fluid">
+<body class="container-fluid">
   {{>header}}
-  <!-- <script src="//content.jwplatform.com/players/6x0GWItI-QOlQApHb.js"></script> -->
-  <script src='//player.ooyala.com/v3/eb2a4912cd64bc282805e03574a056c'></script>
-<div id='ooyalaplayer' style='width:1280px;height:720px'></div>
-<script>
-  OO.ready(function() { OO.Player.create('ooyalaplayer', 'Q4cHVqYjE6c6m8LbM1Kj2GfuRFs66QxB'); });
-</script>
-<noscript><div>Please enable Javascript to watch this video</div></noscript>
-  {{>footer}}
-  <script src="./scripts/js/ad_manager_vast.js"></script>
+  <script src="//content.jwplatform.com/players/6x0GWItI-QOlQApHb.js"></script> {{>footer}}
+  <!-- <script src="./scripts/js/ad_manager_vast.js"></script> -->
 </body>
 
 </html>
