Added adset code

--- a/views/adpoc.hbs
+++ b/views/adpoc.hbs
@@ -11,9 +11,9 @@
       OO.ready(function() { OO.Player.create('ooyalaplayer', 'Q4cHVqYjE6c6m8LbM1Kj2GfuRFs66QxB',{
           height:"100%",
           width:"100%",
-          adSetCode: "your Backlot ad set code",
+          adSetCode: "3adb595dfacb4dfca6cc226c9bdac84a",
           "vast":{
-              tagUrl: "some url"
+              tagUrl: "https://ads.superawesome.tv/v2/ad/34185?vast=true&test=true"
            }
         }); });
     </script>
