Added adset code

--- a/views/adpoc.hbs
+++ b/views/adpoc.hbs
@@ -6,14 +6,14 @@
   {{>header}}
     <div id='container' style='width:640px;height:480px'></div>
     <script src='//player.ooyala.com/v3/eb2a4912cd64bc282805e03574a056c'></script>
-    <div id='ooyalaplayer' style='width:1280px;height:720px'></div>
+    <div id='ooyalaplayer'></div>
     <script>
       OO.ready(function() { OO.Player.create('ooyalaplayer', 'Q4cHVqYjE6c6m8LbM1Kj2GfuRFs66QxB',{
           height:"100%",
           width:"100%",
           adSetCode: "3adb595dfacb4dfca6cc226c9bdac84a",
           "vast":{
-              tagUrl: "https://ads.superawesome.tv/v2/ad/34185?vast=true&test=true"
+              tagUrl: "https://playertest.longtailvideo.com/vast-30s-ad.xml"
            }
         }); });
     </script>
