Removed the div above the player

--- a/views/adpoc.hbs
+++ b/views/adpoc.hbs
@@ -4,7 +4,7 @@
 
 <body class = "container-fluid">
   {{>header}}
-    <div id='container' style='width:640px;height:480px'></div>
+    <!-- <div id='container' style='width:640px;height:480px'></div> -->
     <script src='//player.ooyala.com/v3/eb2a4912cd64bc282805e03574a056c'></script>
     <div id='ooyalaplayer'></div>
     <script>
