Created a new page for Html5 Ad

--- a/views/partials/mainnav.hbs
+++ b/views/partials/mainnav.hbs
@@ -13,6 +13,9 @@
       <li class="nav-item">
         <a class="nav-item nav-link" href="/adpoc"><i class="fa fa-sitemap" aria-hidden="true"></i> Ad POC</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-item nav-link" href="/adpochtml5"><i class="fa fa-sitemap" aria-hidden="true"></i> Ad HTML5</a>
+      </li>
       <input type="hidden" id="ts-login-id" value="" name="">
       <input type="hidden" id="ts-identity-id" value="" name="">
       <input type="hidden" id="ts-db-user-id" value="" name="">
