checking ooyala video for mecard

--- a/views/ooyaladebug.hbs
+++ b/views/ooyaladebug.hbs
@@ -3,14 +3,14 @@
 {{>headinclude}}
 
 <body class = "container-fluid">
-
-<script src='//player.ooyala.com/v3/eb2a4912cd64bc282805e03574a056c'></script>
-<div id='ooyalaplayer' style='width:1280px;height:720px'></div>
-<script>
-  OO.ready(function() { OO.Player.create('ooyalaplayer', 'x1ZTNuYjE6zTFYXIfMj6QYPAyK8feoAL'); });
-</script>
-<noscript><div>Please enable Javascript to watch this video</div></noscript>
-
+    {{>header}}
+    <script src='//player.ooyala.com/v3/eb2a4912cd64bc282805e03574a056c'></script>
+    <div id='ooyalaplayer' style='width:1920px;height:1080px'></div>
+    <script>
+      OO.ready(function() { OO.Player.create('ooyalaplayer', 'B4eGV3YjE6PFoJxvB5jk5vEsvk3JJYd_'); });
+    </script>
+    <noscript><div>Please enable Javascript to watch this video</div></noscript>
+  {{>footer}}
 </body>
 
 </html>
